--- a/css/style.css
+++ b/css/style.css
@@ -9,23 +9,37 @@
 a {
   text-decoration: none;
   color: white;
-}
-
-a:hover {
-  color: rgb(3, 39, 30) !important;
+  font-weight: 600 !important;
 }
 
 i {
   font-size: 25px;
 }
 
-i:hover {
-  color: rgb(3, 39, 30) !important;
-}
 
 footer {
   background-color: #f24c3d;
 }
+
+.nav-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 3px;
+  background-color: white;
+  margin-top: 4px;
+  border-radius: 2px;
+  transition: all 0.3s ease-out;
+}
+
+.nav-link:hover {
+  color: white;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+}
+/* INDEX */
 
 #uno {
   margin-left: 2rem;
@@ -49,6 +63,16 @@ footer {
 .custom-navbar {
   background-color: #f24c3d;
   overflow: hidden;
+}
+
+.contact-navbar {
+  position: fixed;
+  width: 100%;
+  .navbar-brand {
+    > img {
+      width: 150px;
+    }
+  }
 }
 
 .img-container {
@@ -122,7 +146,7 @@ card-img-top {
   letter-spacing: 2px;
 }
 
-/* !Estilos Nosotros!*/
+/* NOSOTROS */
 
 #hero {
   width: 100%;
@@ -285,7 +309,51 @@ card-img-top {
 
 /* CONTACTO */
 
+#contactSection {
+  width: 100%;
+  padding-top: 97px;
+  height: 100vh;
+  display: flex;
+}
+
 .contactContainer {
+  padding: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  background-color: #22a699;
+  color: white;
+  font-weight: 500;
+  margin: 0 auto 20px;
+}
+
+.bubblesWrapper {
+  display: flex;
+  margin-bottom: 40px;
+  > :nth-child(1) {
+    border-right: 2px solid white;
+  }
+  > :nth-child(2) {
+    border-right: 2px solid white;
+  }
+}
+
+.bubleContainer {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  > p {
+    margin: 0;
+  }
+}
+
+.formContainer {
   margin-top: 40px;
   width: 100%;
   max-width: 600px;
@@ -295,14 +363,7 @@ card-img-top {
   border-radius: 16px;
 }
 
-.formTitle {
-  text-align: center;
-  color: white;
-  font-family: "Mulish";
-  margin-bottom: 16px;
-}
-
-#contact {
+.contactForm {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -312,6 +373,16 @@ card-img-top {
   > label {
     color: white;
     font-family: "Mulish";
+  }
+  > input {
+    outline: none;
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 600;
+    transition: all ease-in .1s;
+    color: #f24c3d;
   }
   > button {
     width: auto;
@@ -328,3 +399,25 @@ card-img-top {
     letter-spacing: 1px;
   }
 }
+
+.contactForm input:focus {
+  outline: #22a699 2px solid;
+}
+
+
+.formTitle {
+  text-align: center;
+  color: white;
+  font-family: "Mulish";
+  margin-bottom: 16px;
+}
+
+.contactImageContainer {
+  width: 50%;
+  > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
