--- a/css/style.css
+++ b/css/style.css
@@ -44,16 +44,19 @@ footer {
 #uno {
   margin-left: 2rem;
   z-index: 20;
+  height: 18vh;
 }
 
 #dos {
   margin-left: 6rem;
   z-index: 20;
+  height: 18vh;
 }
 
 #tres {
   margin-left: 8rem;
   z-index: 20;
+  height: 18vh;
 }
 
 .custom-inicio {
@@ -79,7 +82,7 @@ footer {
   position: relative;
   background-image: url(../public/img/fondo-index.jpg);
   width: 100%;
-  height: 85vh;
+  height: 82vh;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -324,6 +327,11 @@ card-img-top {
   position: relative;
 }
 
+.product-image-cart {
+  width: 6rem;
+  margin-right: 10px;
+}
+
 .close-button {
   position: absolute;
   top: 0;
@@ -353,9 +361,25 @@ card-img-top {
   border-radius: 5px;
   cursor: pointer;
   transition: all .2s ease;
+
 }
 
 #checkoutButton:hover {
+  background-color: green;
+}
+
+#vaciarCarritoButton {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all .2s ease;
+  margin-top: 10px;
+}
+
+#vaciarCarritoButton:hover {
   background-color: #f24c3d;
 }
 
