--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,12 @@ i {
   font-size: 25px;
 }
 
-
 footer {
   background-color: #f24c3d;
 }
 
 .nav-link::after {
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 3px;
@@ -313,13 +312,13 @@ card-img-top {
   z-index: 1000;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
   background-color: white;
-  margin: 15% auto;
+  margin: 8% auto;
   padding: 20px;
   border-radius: 10px;
   width: 80%;
@@ -343,15 +342,44 @@ card-img-top {
 #cartItemsList {
   list-style: none;
   padding: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 300px;
 }
 
 #cartItemsList li {
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  > h3 {
+    font-size: 14px;
+    margin: 0;
+  }
+
+  > p {
+    margin: 0;
+  }
 }
 
 #cartTotal {
   font-weight: bold;
 }
+
+.quantity {
+ 
+}
+
+.subTotal {
+  color: white;
+  font-weight: 500;
+  padding: 4px;
+  background-color: #22a699;
+  border-radius: 4px;
+}
+
+/* CHECKOUT  */
 
 #checkoutButton {
   background-color: #22a699;
@@ -360,8 +388,7 @@ card-img-top {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  transition: all .2s ease;
-
+  transition: all 0.2s ease;
 }
 
 #checkoutButton:hover {
@@ -375,14 +402,13 @@ card-img-top {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
   margin-top: 10px;
 }
 
 #vaciarCarritoButton:hover {
   background-color: #f24c3d;
 }
-
 
 /* CONTACTO */
 
@@ -458,7 +484,7 @@ card-img-top {
     border-radius: 6px;
     font-size: 16px;
     font-weight: 600;
-    transition: all ease-in .1s;
+    transition: all ease-in 0.1s;
     color: #f24c3d;
   }
   > button {
@@ -481,7 +507,6 @@ card-img-top {
   outline: #22a699 2px solid;
 }
 
-
 .formTitle {
   text-align: center;
   color: white;
@@ -498,7 +523,6 @@ card-img-top {
   }
 }
 
-
 /* CHECKOUT */
 
 #checkout {
@@ -507,17 +531,17 @@ card-img-top {
 }
 
 .checkoutTitle {
-background-color: #f29727;
-color: white;
+  background-color: #f29727;
+  color: white;
 }
 
 .headerCheckOut {
   letter-spacing: 1px;
-  font-family: 'Mulish';
+  font-family: "Mulish";
 }
 
 .tarjetas {
->img {
-  width: 70px;
-}
+  > img {
+    width: 70px;
+  }
 }
