--- a/css/style.css
+++ b/css/style.css
@@ -351,11 +351,13 @@ card-img-top {
   margin-bottom: 10px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 10px;
 
   > h3 {
     font-size: 14px;
     margin: 0;
+    max-width: 100px;
   }
 
   > p {
@@ -363,12 +365,32 @@ card-img-top {
   }
 }
 
+
+.unitsMod {
+  border: none;
+  background-color: #f24c3d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: 700;
+  color: white;
+  width: 25px;
+  height: 25px;
+}
+
 #cartTotal {
   font-weight: bold;
 }
 
 .quantity {
- 
+ display: flex;
+ gap: 4px;
+ > input {
+  font-size: 15px;
+  text-align: center;
+  max-width: 30px;
+ }
 }
 
 .subTotal {
